--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "@ngrx/entity": "^7.3.0",
     "@ngrx/store": "^7.3.0",
     "@ngrx/store-devtools": "^7.3.0",
+    "chart.js": "^2.8.0",
     "core-js": "^2.5.4",
     "lodash": "^4.17.11",
+    "ng2-charts": "^2.2.0",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.29"
   },
