--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
         "@angular/platform-browser": "^7.2.2",
         "@angular/platform-browser-dynamic": "^7.2.2",
         "@angular/router": "^7.2.2",
+        "@ionic-native/camera": "^5.4.0",
         "@ionic-native/core": "^5.0.0",
+        "@ionic-native/file-transfer": "^5.4.0",
         "@ionic-native/splash-screen": "^5.0.0",
         "@ionic-native/sqlite": "^5.3.0",
         "@ionic-native/status-bar": "^5.0.0",
@@ -31,6 +33,18 @@
         "@ngrx/store": "^7.3.0",
         "@ngrx/store-devtools": "^7.3.0",
         "chart.js": "^2.8.0",
+        "cordova-android": "^6.2.3",
+        "cordova-ios": "^4.4.0",
+        "cordova-plugin-camera": "^2.4.1",
+        "cordova-plugin-compat": "^1.2.0",
+        "cordova-plugin-device": "^2.0.2",
+        "cordova-plugin-file": "^6.0.1",
+        "cordova-plugin-file-transfer": "^1.7.1",
+        "cordova-plugin-ionic-keyboard": "^2.1.3",
+        "cordova-plugin-ionic-webview": "^3.1.2",
+        "cordova-plugin-splashscreen": "^5.0.2",
+        "cordova-plugin-statusbar": "^2.4.2",
+        "cordova-plugin-whitelist": "^1.3.3",
         "cordova-sqlite-storage": "^3.2.0",
         "core-js": "^2.5.4",
         "lodash": "^4.17.11",
@@ -69,7 +83,22 @@
     "description": "An Ionic project",
     "cordova": {
         "plugins": {
-            "cordova-sqlite-storage": {}
-        }
+            "cordova-sqlite-storage": {},
+            "cordova-plugin-device": {},
+            "cordova-plugin-ionic-keyboard": {},
+            "cordova-plugin-ionic-webview": {},
+            "cordova-plugin-splashscreen": {},
+            "cordova-plugin-statusbar": {},
+            "cordova-plugin-whitelist": {},
+            "cordova-plugin-camera": {
+                "CAMERA_USAGE_DESCRIPTION": " ",
+                "PHOTOLIBRARY_USAGE_DESCRIPTION": " "
+            },
+            "cordova-plugin-file-transfer": {}
+        },
+        "platforms": [
+            "android",
+            "ios"
+        ]
     }
 }
